# Orange_HRM

./: .gitignore  .pre-commit-config.yaml  README.md  behave.ini  login.feature  pretty.output  pyproject.toml  requirements.txt
allure-report/: app.js  styles.css
features/: admin.feature  environment.py  login.feature
pages/: Admin_page.py  forgot_password_page.py  login_page.py
reports/: 002942f3-c411-4d10-901d-8740cd23d1da-result.json  02566bd7-7af6-4d51-ae77-52b1b6aa8c1f-result.json  12b00fd1-b30a-4b50-9665-04174837ea2d-result.json  1a9f707b-7512-4d4a-9eae-39d4e8b29218-result.json  23be53da-796a-4a80-bc88-4fc3c989a6ac-result.json  279c5ef6-d95e-404a-bfe9-72ba83ae2ed1-result.json  292864b5-7905-4364-be69-adc8c53d7ebf-result.json  2ed9f9f5-7f14-42a7-a926-9eb6b936cdd8-result.json  30783581-c58f-4233-97eb-34b068e741a5-result.json  356f7a98-3333-4766-9649-2c9c55183e2d-result.json  39d006fe-db4f-4636-b7a4-6979716d22a3-result.json  3dc77633-2ea3-4cac-a95f-3b2053b83146-result.json  3e8364c3-9928-4b64-af57-e597775ba6a1-result.json  3f68318b-bd82-444c-b736-d8a69362d41d-result.json  44958975-9ee9-4fb4-b010-17bc0fe6ac08-result.json  46444df9-0425-42a0-b2c3-4060aea4f0a5-result.json  496931d1-25aa-4e42-ab77-906b72f70ea5-result.json  4aca0891-98e6-491f-ba6e-12c3a7589bb9-result.json  4b4cb0f5-72de-42a4-aba7-f5a1bce7690a-result.json  53848bcd-c9e1-48ed-bed8-76708deea96a-result.json  59515c60-0f39-4173-a9c5-8b8d310d3a2e-result.json  5bee484b-344f-4241-93e1-c248bca679c1-result.json  638406c3-1b43-4dcf-9efd-c736842f0d20-result.json  6465f247-1a5e-4a57-8ef2-205e3fc7624b-result.json  (+38 more)
(+10 files in other folders)
